# QuickI2C

./: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml  library.json  platformio.ini
.github/workflows/: esp-idf.yml
examples/: GZP6895.hpp  LPS22HB.hpp  MAX45xx.hpp  MPL3115.hpp  PCA9544A.hpp  SMxx31.hpp  TMP10x.hpp
include/: QuickI2C.h
src/: QuickI2C.cpp
test/arduino-smoke/: platformio.ini
test/espidf-smoke/: CMakeLists.txt
test/espidf-smoke/main/: CMakeLists.txt
